# twotter

./: .gitignore  history.txt  license.md  readme.md
client/assets/: index.html
server/: Cargo.toml
server/src/: database.rs  main.rs  setup.surreal
