[package]
name = "twotter-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
actix-files = "0.6"
actix-web = "4"
color-eyre = "0.6"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplelog = "0.12"
surrealdb = "1.0.0-beta.8"
tokio = { version = "1", features = ["full"] }
